@@ -7,19 +7,19 @@ public class DropBoxApi extends DefaultApi10a
   @Override
   public String getAccessTokenEndpoint()
   {
-    return "https://api.dropbox.com/0/oauth/access_token";
+    return "https://api.dropbox.com/1/oauth/access_token";
   }
 
   @Override
   public String getAuthorizationUrl(Token requestToken)
   {
-    return "https://www.dropbox.com/0/oauth/authorize?oauth_token="+requestToken.getToken();
+    return "https://www.dropbox.com/1/oauth/authorize?oauth_token="+requestToken.getToken();
   }
 
   @Override
   public String getRequestTokenEndpoint()
   {
-    return "https://api.dropbox.com/0/oauth/request_token";
+    return "https://api.dropbox.com/1/oauth/request_token";
   }
 
 }
