@@ -1,34 +1,21 @@
 package org.scribe.builder.api;
 
 import org.scribe.model.Token;
-import org.scribe.model.Verb;
 
 public class EvernoteApi extends DefaultApi10a
 {
   private static final String AUTHORIZATION_URL = "https://www.evernote.com/OAuth.action?oauth_token=%s";
-  
-  @Override
-  public Verb getRequestTokenVerb()
-  {
-    return Verb.GET;
-  }
 
-	@Override
+  @Override
 	public String getRequestTokenEndpoint()
   {
-		return "https://www.evernote.com/oauth";
-	}
-
-	@Override
-	public Verb getAccessTokenVerb()
-	{
-	  return Verb.GET;
-	}
+    return "https://www.evernote.com/oauth";
+  }
 
 	@Override
 	public String getAccessTokenEndpoint()
 	{
-		return "https://www.evernote.com/oauth";
+	  return "https://www.evernote.com/oauth";
 	}
 	
 	@Override
@@ -39,24 +26,24 @@ public class EvernoteApi extends DefaultApi10a
 
 	public static class Sandbox extends EvernoteApi
 	{
-	  private static final String SANDBOX_URL = "https://sandbox.evernote.com/oauth";
+	  private static final String SANDBOX_URL = "https://sandbox.evernote.com";
 
 	  @Override
 	  public String getRequestTokenEndpoint()
 	  {
-	    return SANDBOX_URL;
+	    return SANDBOX_URL + "/oauth";
 	  }
 
 	  @Override
 	  public String getAccessTokenEndpoint()
 	  {
-	    return SANDBOX_URL;
+      return SANDBOX_URL + "/oauth";
 	  }
 
 	  @Override
 	  public String getAuthorizationUrl(Token requestToken)
 	  {
-	    return String.format(SANDBOX_URL + "?oauth_token=%s", requestToken.getToken());
+	    return String.format(SANDBOX_URL + "/OAuth.action?oauth_token=%s", requestToken.getToken());
 	  }
-	}
+	}	
 }
