@@ -12,7 +12,9 @@ import org.scribe.model.OAuthConstants;
 public class Preconditions
 {
   private static final String DEFAULT_MESSAGE = "Received an invalid parameter";
-  private static final Pattern URL_PATTERN = Pattern.compile("[a-zA-Z_-]+://\\S+");
+  
+  // scheme = alpha *( alpha | digit | "+" | "-" | "." )
+  private static final Pattern URL_PATTERN = Pattern.compile("^[a-zA-Z][a-zA-Z0-9+.-]*://\\S+");
 
   /**
    * Checks that an object is not null.
