@@ -1,36 +1,37 @@
 package org.scribe.examples;
 
+import java.util.*;
+
 import org.scribe.builder.*;
 import org.scribe.builder.api.*;
 import org.scribe.model.*;
 import org.scribe.oauth.*;
-import java.util.*;
 
-public class SinaWeibo2Example
+public class DiggExample 
 {
-  private static final String NETWORK_NAME = "SinaWeibo";
-  private static final String PROTECTED_RESOURCE_URL = "https://api.weibo.com/2/account/get_uid.json";
-  private static final Token EMPTY_TOKEN = null;
+  private static final String NETWORK_NAME = "Digg";
+  private static final String PROTECTED_RESOURCE_URL = "http://services.digg.com/2.0/comment.digg";
 
-  public static void main(String[] args)
+  public static void main(String[] args) 
   {
     // Replace these with your own api key and secret
-    String apiKey = "your_api_key";
-    String apiSecret = "your_api_secret";
-    OAuthService service = new ServiceBuilder()
-        .provider(SinaWeiboApi20.class)
-        .apiKey(apiKey)
-        .apiSecret(apiSecret)
-        .callback("http://www.dajie.com/oauth/sina")
-        .build();
+    String apiKey = "myKey";
+    String apiSecret = "mySecret";
+    OAuthService service = new ServiceBuilder().provider(DiggApi.class).apiKey(apiKey).apiSecret(apiSecret).build();
     Scanner in = new Scanner(System.in);
 
     System.out.println("=== " + NETWORK_NAME + "'s OAuth Workflow ===");
     System.out.println();
 
+    // Obtain the Request Token
+    System.out.println("Fetching the Request Token...");
+    Token requestToken = service.getRequestToken();
+    System.out.println("Got the Request Token!");
+    System.out.println();
+
     // Obtain the Authorization URL
     System.out.println("Fetching the Authorization URL...");
-    String authorizationUrl = service.getAuthorizationUrl(EMPTY_TOKEN);
+    String authorizationUrl = service.getAuthorizationUrl(requestToken);
     System.out.println("Got the Authorization URL!");
     System.out.println("Now go and authorize Scribe here:");
     System.out.println(authorizationUrl);
@@ -39,16 +40,17 @@ public class SinaWeibo2Example
     Verifier verifier = new Verifier(in.nextLine());
     System.out.println();
 
-    // Trade the Request Token and Verifier for the Access Token
+    // Trade the Request Token and Verfier for the Access Token
     System.out.println("Trading the Request Token for an Access Token...");
-    Token accessToken = service.getAccessToken(EMPTY_TOKEN, verifier);
+    Token accessToken = service.getAccessToken(requestToken, verifier);
     System.out.println("Got the Access Token!");
     System.out.println("(if your curious it looks like this: " + accessToken + " )");
     System.out.println();
 
     // Now let's go and ask for a protected resource!
     System.out.println("Now we're going to access a protected resource...");
-    OAuthRequest request = new OAuthRequest(Verb.GET, PROTECTED_RESOURCE_URL);
+    OAuthRequest request = new OAuthRequest(Verb.POST, PROTECTED_RESOURCE_URL);
+    request.addBodyParameter("comment_id", "20100729223726:4fef610331ee46a3b5cbd740bf71313e");
     service.signRequest(accessToken, request);
     Response response = request.send();
     System.out.println("Got it! Lets see what we found...");
